Fix letter spacing on groupcard

--- a/client/src/components/GroupCard/GroupCard.scss
+++ b/client/src/components/GroupCard/GroupCard.scss
@@ -35,7 +35,7 @@
     transform: translatey(-0.8rem) rotate(-10deg);
   }
   &__name {
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.2rem;
     overflow-wrap: anywhere;
   }
   &__details {
